[gd_scene load_steps=6 format=3 uid="uid://c5rbjojh2hovr"]

[ext_resource type="Texture2D" uid="uid://dfx7487sla41y" path="res://game/ui/assets/textbox.png" id="1"]
[ext_resource type="Script" path="res://game/ui/textbox.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://chn20bhkropct" path="res://icon.png" id="4"]
[ext_resource type="AudioStream" uid="uid://hx2btb27j45n" path="res://game/ui/assets/Quick_2.ogg" id="4_5lmms"]
[ext_resource type="AudioStream" uid="uid://dyfdpg0nxrxjv" path="res://game/ui/assets/Quick_3.ogg" id="5_1g8ti"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="DialogTextbox" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -79.0
offset_right = 148.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1")
patch_margin_left = 28
patch_margin_top = 12
patch_margin_right = 9
patch_margin_bottom = 20
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="DialogTextbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DialogTextbox/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="DialogTextbox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogTextbox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "NAME
Line 1
Line 2"
scroll_active = false

[node name="AudioStreamPlayerHigh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5lmms")

[node name="AudioStreamPlayerLow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1g8ti")
